# olimex-rp2350pc

./: CMakeLists.txt  README.md  pico_sdk_import.cmake
src/: es8311_audio.c  es8311_audio.h  hardware_rp2350.c  hardware_rp2350.h  main.c  sd_fatfs.c  sd_fatfs.h  tinybasic.c  tinybasic.h  tusb_config.h  usb_host_hid.c  usb_host_hid.h  video_dvi.c  video_dvi.h
